creating detailed view pages

--- a/Web.config
+++ b/Web.config
@@ -11,4 +11,15 @@
       <httpRuntime targetFramework="4.5.1" />
     </system.web>
 
+  <connectionStrings>
+
+    <remove name="LocalSqlServer"/>
+
+    <add name="LocalSqlServer" connectionString="Data Source=apollo.biz.uiowa.edu; Initial Catalog=msci3300_g5; Persist Security Info=True; User ID=msci3300_g5; Password=Gr0up5!!!"/>
+
+    <add name="db_stateFacts" connectionString="Data Source=apollo.biz.uiowa.edu; Initial Catalog=msci3300_g5; Persist Security Info=True; User ID=msci3300_g5; Password=Gr0up5!!!" providerName="System.Data.SqlClient"/>
+
+  </connectionStrings>
+
+  
 </configuration>
