--- a/Web.config
+++ b/Web.config
@@ -21,5 +21,10 @@
 
   </connectionStrings>
 
-  
+  <appSettings>
+
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+
+  </appSettings>
+
 </configuration>
